# project

./: README.md  TODO.md  main.py  project.md  render.yaml  requirements.txt
.zencoder/rules/: repo.md
agents/: cost_advisor.py  data_validator.py  query_optimizer.py  schema_advisor.py
api/: .env.example  Dockerfile  pyproject.toml
api/app/: db.py  main.py  settings.py
api/app/agents/: cost_saver.py  data_validation.py  query_optimizer.py  schema_normalizer.py
api/app/utils/: claude_client.py  cost_stats.py  explain.py  introspection.py
db/: mariadb_client.py
static/: script.js  style.css
utils/: claude_client.py  config.py
