[tool.poetry]
name = "mariadb-ai-api"
version = "0.1.0"
description = "AI-powered sub-agents for MariaDB query optimization and schema management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"  # For potential migrations
python-multipart = "^0.0.6"  # For file uploads in validation
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
